# reading-diary-challenge

./: .gitignore  README.es.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
readingdiary/: app.py  model.py  model.py.txt  view.py
tests/: test_model_pytest.py  test_model_unittest.py
